--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router": "^7.0.1",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
+    "react-scroll-to-bottom": "^4.2.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
